[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/players/css_sprites (1).png" type="Texture" id=1]
[ext_resource path="res://scripts/Puang.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/come-on-you-can-do-it.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/audio/you_got_it_2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/goddamnit.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/jump.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Flap"
tracks/0/type = "value"
tracks/0/path = NodePath("PuangSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[node name="Puang" type="RigidBody2D"]
position = Vector2( 210, 167.676 )
scale = Vector2( 1, 1.087 )
collision_layer = 2
collision_mask = 2
mass = 0.0510204
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="PuangSprite" type="Sprite" parent="."]
position = Vector2( 22, 0 )
scale = Vector2( 0.668209, 0.705612 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="FlapAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flap = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -11.9865, 0 )
scale = Vector2( 0.668209, 0.705612 )
polygon = PoolVector2Array( 55.5, -186.9, 55.5, -175, 53.6, -175, 55.4, -149, 57.5, -144.9, 59, -146.4, 61.5, -145.3, 61.5, -143.9, 67.5, -138.9, 67.5, -134, 73.5, -134, 73.5, -131.9, 79.5, -126.9, 79.5, -122.4, 74.5, -115.4, 79.5, -112.1, 79.5, -102.2, 81.3, -102, 82.3, -92, 86.5, -86.7, 86.5, -83.4, 85.5, -81.8, 97.5, -66.7, 97.5, -63.9, 98, -64.4, 100.5, -63.3, 100.5, -62.1, 103.5, -60.1, 103.5, -55.2, 102.1, -53.8, 110.5, -49.2, 110.5, -44.1, 105.8, -40, 112.5, -40, 112.5, -36.7, 113.5, -38, 116.7, -38, 118.7, -34, 123.5, -34, 123.5, -35.4, 133.5, -38.8, 133.5, -35.8, 135.5, -33.8, 135.5, -28.8, 135, -28, 135.5, -28.3, 135.5, -4, 133, -4, 123.1, 2, 122.5, 2, 125.9, 5.5, 124.8, 8, 122.9, 8, 102.7, 12, 97.7, 12, 99.5, 14.3, 99.5, 23, 97.6, 23, 95.6, 26, 93.2, 26, 88.5, 24.4, 88.5, 22.5, 88.1, 21.7, 87.5, 22.1, 87.5, 24, 91.5, 27, 91.5, 29.8, 88.3, 33, 85.9, 33, 78, 34.6, 80.7, 40, 77.7, 40, 75.7, 44, 69.5, 44, 69.5, 46.6, 68.4, 48.2, 78.5, 60.3, 78.5, 64, 84, 83, 87.5, 86.2, 87.5, 95, 89.3, 111.1, 95.5, 112.4, 95.5, 117, 90.5, 117, 90, 119, 97.5, 119, 97.5, 125, 92.2, 129, 89.2, 129, 88.5, 128.8, 88.5, 135, 86, 135, 82.5, 137.1, 82.5, 138.2, 83.9, 139.5, 82.8, 142, 81.5, 142, 78.5, 146, 74.5, 146, 74.5, 147.3, 72.9, 152, 66.4, 152, 65.8, 157, 67.3, 157, 70.5, 160.2, 70.5, 162.8, 65.3, 168, 63.5, 168, 63.5, 172.2, 67.5, 176.2, 67.5, 186, 65.6, 186, 63.6, 189, 61.3, 189, 58, 188.4, 55.8, 192, -2.5, 192, -5.10001, 192, -56.5, 192, -60.5, 189, -60.5, 184.7, -68.5, 179, -68.5, 174, -76.5, 171.4, -76.5, 167.6, -73.9, 161, -71.4, 161, -72.9, 159.5, -71.8, 157, -70.2, 157, -69, 156, -78.5, 156, -78.5, 154.1, -83.5, 151.1, -83.5, 147.3, -82.5, 146, -91.5, 143.5, -91.5, 139.6, -83.5, 136.6, -83.5, 136, -84.3, 130.9, -90.5, 129.6, -90.5, 116, -88.6, 116, -85.5, 111.4, -85.5, 108.9, -83.3, 85, -82, 85, -74, 59, -72.4, 59, -64.4, 49.7, -67.5, 50.8, -67.5, 43.8, -78.5, 37.1, -78.5, 35, -80, 29, -93.1, 17.2, -96.1, 26, -99.3, 26, -104.5, 20.8, -104.5, 15.1, -99.3, 10.6, -118.5, 7.7, -118.5, 5.8, -122.3, 2, -123.9, 2, -119.2, 5.2, -120, 8, -122, 8, -127.5, 11.3, -129.5, 10.2, -129.5, 9, -135.5, 4.5, -135.5, -16.5, -132.7, -22, -125.5, -22, -125.5, -20.1, -117, -15, -114.4, -15, -109.2, -14.3, -108.6, -17, -111, -14.6, -113.5, -15.7, -113.5, -17.5, -119.8, -28, -118.7, -30, -118.5, -38, -116.2, -38, -109.2, -44, -105.7, -44, -101.8, -40.1, -101.7, -42.3, -107.9, -48.5, -106.8, -51, -104.9, -51, -101.5, -51.7, -101.5, -54.5, -97.5, -61.5, -97.5, -62.7, -101.3, -74, -98.6, -74, -103.8, -82.9, -102.7, -85, -101.2, -85, -97.2, -88, -93.7, -88, -91.8, -86.1, -88.5, -87.4, -88.5, -92.5, -92.8, -101, -102.5, -106.9, -102.5, -110.8, -97.9, -116, -101, -116, -108.5, -119.8, -108.5, -128, -105.8, -128, -102.6, -129.4, -104.1, -136, -105.1, -136, -112.5, -140.9, -112.5, -143.2, -108.2, -167, -106.3, -167, -104.5, -168.8, -104.5, -180, -102.6, -180, -96.5, -189.6, -96.5, -192, -27.4, -192, -24.5, -190.1, -24.5, -185.4, -24.8, -185, -23.7, -185, -20.5, -181.8, -20.5, -158, -8.5, -158, -8.5, -158.7, -2.5, -159.7, -2.5, -162.8, 0.699997, -166, -0.5, -166.8, -0.5, -171, -5.3, -171, -8.5, -174.2, -8.5, -178.9, -1.5, -184.9, -1.5, -192, 49.5, -192 )

[node name="AudioMask" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="AudioMedicine" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="AudioVirus" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="AudioJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
